cm4all-beng-proxy (0.6.7) unstable; urgency=low

  * file-handler: generate Expires from xattr user.MaxAge
  * cmdline: added option --set to configure:
    - max_connections

 --

cm4all-beng-proxy (0.6.6) unstable; urgency=low

  * added missing GLib build dependency
  * cgi-handler: set the "body_consumed" flag

 -- Max Kellermann <mk@cm4all.com>  Tue, 04 Aug 2009 09:53:01 +0200

cm4all-beng-proxy (0.6.5) unstable; urgency=low

  * shm: pass MAP_NORESERVE to mmap()
  * proxy-handler: support cookies
  * translation: added DISCARD_SESSION packet

 -- Max Kellermann <mk@cm4all.com>  Wed, 15 Jul 2009 18:00:33 +0200

cm4all-beng-proxy (0.6.4) unstable; urgency=low

  * http-client: don't read response body in HEAD requests
  * ajp-client: invoke the "abort" handler on error
  * filter-cache: lock cache items while they are served

 -- Max Kellermann <mk@cm4all.com>  Thu, 09 Jul 2009 14:36:14 +0200

cm4all-beng-proxy (0.6.3) unstable; urgency=low

  * http-server: implemented the DELETE method
  * http-server: refuse HTTP/0.9 requests
  * proxy-handler: send request body to template when no widget is focused
  * widget-request: pass original HTTP method to widget
  * session: automatically defragment sessions

 -- Max Kellermann <mk@cm4all.com>  Tue, 07 Jul 2009 16:57:22 +0200

cm4all-beng-proxy (0.6.2) unstable; urgency=low

  * lock: fixed race condition in debug flag updates
  * session: use rwlock for the session manager
  * proxy-handler: pass request headers to the remote HTTP server
  * proxy-handler: forward original Accept-Charset if processor is disabled
  * pipe: don't filter resources without a body
  * fcache: forward original HTTP status over "pipe" filter
  * cgi: support the "Status" line

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Jul 2009 16:38:26 +0200

cm4all-beng-proxy (0.6.1) unstable; urgency=low

  * session: consistently lock all session objects
  * rewrite-uri: check if widget_external_uri() returns NULL