@@ -107,6 +107,16 @@ settings:
 connections. \\
 
 \hline
+
+\texttt{http\_cache\_size} & The maxmimum amount of memory used by the
+HTTP cache.  Set to 0 to disable the HTTP cache. \\
+
+\hline
+
+\texttt{filter\_cache\_size} & The maxmimum amount of memory used by
+the filter cache.  Set to 0 to disable the filter cache. \\
+
+\hline
 \end{tabular}
 
 
